# pipe

./: .CMakeLists.txt.swp  .gitignore  Architecture.txt  CMakeLists.txt  CmakeLists.txt
pipe/: CMakeLists.txt  buffer.cpp  buffer.h  channel.cpp  channel.h  channelfactory.cpp  channelfactory.h  pipe.cpp  pipe.h
